<resources>
    <string name="app_name">Image Editor</string>

    <string name="testImage1">Test Image</string>

    <string name="beginbutton1">New</string>
    <string name="beginbutton2">Load</string>

    <string name="button1">Reset</string>
    <string name="button2">Gray</string>
    <string name="button3">Gray RS</string>
    <string name="button4">Colorize</string>
    <string name="button5">Contrast DE</string>
    <string name="button6">Contrast HE</string>
    <string name="button7">Convolve</string>
    <string name="button7_1">Average</string>
    <string name="button7_2">Gaussian</string>
    <string name="button7_3">Effet 1</string>
    <string name="button7_4">Effet 2</string>
    <string name="button8">Brightness</string>
    <string name="button9">ColorSaver</string>
    <string name="button10">Incrustation</string>

    <string name="imageDescription">Test image</string>
</resources>
